--- a/.github/workflows/ci-backend-java.yml
+++ b/.github/workflows/ci-backend-java.yml
@@ -64,6 +64,8 @@ jobs:
     - name: Update Kustomize Deployment with New Tag
     # 해당 위치에 내용 추가
       run: |
+        TAG="${{ gitgub.event.inputs.name }}-${{ env.DATA_TAG }}"
+        sed -i "s|newTag: .*$|newTag: $TAG|g" gitops/backend-java/overlays/dev/kustomization.yaml
 
 
     - name: Commit and push changes
