--- a/.github/workflows/ci-backend-java.yml
+++ b/.github/workflows/ci-backend-java.yml
@@ -58,18 +58,16 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: .  # 프로젝트 루트를 기준으로 설정
-        file: ./gitops/backend-java/Dockerfile  # Dockerfile의 위치를 정확히 지정      
+        file: ./edu3-gitops-dev/backend-java/Dockerfile  # Dockerfile의 위치를 정확히 지정      
         push: true        
         tags: ${{ secrets.AZURE_URL }}/backend-java:${{ github.event.inputs.name }}-${{ env.DATE_TAG }}
         build-args: |
           JAR_PATH=${{ env.JAR_PATH }}
 
     - name: Update Kustomize Deployment with New Tag
-    # 해당 위치에 내용 추가
       run: |
-        TAG="${{ github.event.inputs.name }}-${{ env.DATA_TAG }}"
-        sed -i "s|newTag: .*$|newTag: $TAG|g" gitops/backend-java/overlays/dev/kustomization.yaml
-
+        TAG="${{ secrets.AZURE_URL }}/backend-java:${{ github.event.inputs.name }}-${{ env.DATE_TAG }}"
+        sed -i "s|image: .*$|image: $TAG|" gitops/backend-java/overlays/dev/kustomization.yaml
 
     - name: Commit and push changes
       run: |
