--- a/gitops/backend-java/overlays/dev/kustomization.yaml
+++ b/gitops/backend-java/overlays/dev/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 
 images:
   - name: eduazureregistry.azurecr.io/backend-java
-    newTag: main-
+    newTag: main-3333
 
 commonLabels:
   app: backend-java
