--- a/.github/workflows/ci-backend-java.yml
+++ b/.github/workflows/ci-backend-java.yml
@@ -28,6 +28,9 @@ jobs:
         distribution: 'temurin'
         java-version: '17'
 
+    - name: Grant execute permission for Gradle wrapper
+      run: chmod +x backend-java/gradlew
+
     - name: Build Java application using Gradle
       working-directory: ./backend-java
       run: ./gradlew build
@@ -62,9 +65,9 @@ jobs:
           JAR_PATH=${{ env.JAR_PATH }}
 
     - name: Update Kustomize Deployment with New Tag
+    # 해당 위치에 내용 추가
       run: |
-        TAG="${{ secrets.AZURE_URL }}/backend-java:${{ github.event.inputs.name }}-${{ env.DATE_TAG }}"
-        sed -i "s|image: .*$|image: $TAG|" gitops/backend-java/overlays/dev/kustomization.yaml
+
 
     - name: Commit and push changes
       run: |
